<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Voice Memo Recorder</string>
    <string name="action_settings">Settings</string>
    <string name="record">Record</string>
    <string name="pause">Pause</string>
    <string name="cancel">Cancel</string>
    <string name="stop">Stop</string>
    <string name="save">Save</string>
    <string name="play">Play</string>
    <string name="name_label">Name:</string>
    <string name="subject_label">Subject:</string>
    <string name="name_hint">Recording name&#8230;</string>
    <string name="subject_hint">Type of recording&#8230;</string>
    <string name="no_recordings">No Recordings</string>
    <string name="confirm">Confirm</string>
    <string name="untitled">Untitled</string>
    <string name="date">Date</string>
    <string name="duration">Duration</string>
    <string name="notes_hint">Notes&#8230;</string>
    <string name="mute_action">Mute</string>
    <string name="list_action">List</string>
    <string name="setting_action">Settings</string>
    <string name="help_action">Help</string>
    <string name="about_action">About</string>
    <string name="about_message">This app written by Gonzalo Gomez, Israel Gomez, and Kameron Kincade all of whom are students in Computer
	    Science at the Colorado School of Mines. This app was written to facilitate students in their rigorous college careers.</string>
    <string name="help_message_1">There are two text fields where you can name your recording and specify the subject of your recording. 
        Click the record button to begin recording and click it again to save the recording. 
        You will be redirected to a screen of your saved recordings. </string>
    <string name="help_message_2">Click on a recording to edit the name and subject as well as add notes. Click the play the button to playback your recording.\nLong click a recording to delete it from your device.        
    </string>
    <string name="settings_messag">Enter name for default name:</string>
    <string name="settings_messag2">Enter subject for default subject:</string>
    <string name="mute_message">Volume Muted</string>
    <string name="play_message">Volume Unmuted</string>
    <string name="s">s</string>
    
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="gray">#555555</color>
    <color name="red">#FF0000</color>
    <color name="green">#7CFC00</color>

    <string name="title_activity_recording_list_adapter">RecordingListAdapter</string>


</resources>