<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recording_single_pane"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/recording_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/recording_name_edit_text"
            android:hint="@string/name_hint"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/recording_subject_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject_label"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/recording_subject_edit_text"
            android:hint="@string/subject_hint"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_weight="1" >
        </EditText>

    </LinearLayout>

    <EditText
        android:id="@+id/recording_notes_edit_text"
        android:hint="@string/notes_hint"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:ems="10" 
        android:textColor="@color/white"
        android:inputType="textMultiLine"
        android:lines="8"
        android:gravity="left">
        <requestFocus />
    </EditText>
    
	<LinearLayout
        android:id="@+id/linear_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/play_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_weight="0.3"
            android:gravity="center"
            android:onClick="startPlayback"
            android:text="@string/play"
            android:textColor="@color/white" 
            android:enabled="false" />
        
        <Button
            android:id="@+id/pause_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="0.3"
            android:gravity="center"
            android:onClick="pausePlayback"
            android:text="@string/pause"
            android:textColor="@color/white" 
            android:enabled="false" />
        
        <Button
            android:id="@+id/stop_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="0.3"
            android:gravity="center"
            android:onClick="stopPlayback"
            android:text="@string/stop"
            android:textColor="@color/white" 
            android:enabled="false" />

    </LinearLayout>
    
</LinearLayout>
