<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/edit_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_label"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/name_hint"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="16sp" 
            android:maxLength="25"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/edit_subject_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_name_layout"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/subject_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/subject_label"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/subject_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="left"
            android:hint="@string/subject_hint"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            android:maxLength="25"
            android:singleLine="true"/>
    </LinearLayout>

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:textColor="@color/red"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:gravity="bottom|center"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <ToggleButton
            android:id="@+id/record_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:onClick="record"
            android:textColor="@color/white"
            android:textOff="@string/record"
            android:textOn="@string/stop" />

    </LinearLayout>

</RelativeLayout>