<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/recording_list_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linear_layout_buttons"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/recording_list"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="@color/black"
            android:clickable="true"
            android:divider="@color/white"
            android:dividerHeight="1dip"
            android:longClickable="true" >
        </ListView>

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linear_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/play_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_weight="0.3"
            android:gravity="center"
            android:onClick="startPlayback"
            android:text="@string/play"
            android:textColor="@color/white" 
            android:enabled="false" />
        
        <Button
            android:id="@+id/pause_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="0.3"
            android:gravity="center"
            android:onClick="pausePlayback"
            android:text="@string/pause"
            android:textColor="@color/white" 
            android:enabled="false" />
        
        <Button
            android:id="@+id/stop_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="0.3"
            android:gravity="center"
            android:onClick="stopPlayback"
            android:text="@string/stop"
            android:textColor="@color/white" 
            android:enabled="false" />

    </LinearLayout>

</RelativeLayout>